# slack-emoji-paccho

./: .envrc.sample  .gitignore  README.md  package.json  pyproject.toml  serverless.yml
.github/workflows/: check.yml  deploy_prd.yml
src/: post_new_channel.py  post_new_emoji.py
